# scheduling-dbt

./: README.md
with-airflow/: .env  .gitignore  Makefile  README.md  docker-compose.yaml
with-airflow/dags/: demo_dbt_dag.py  demo_dbt_task_group.py
with-airflow/dbt/example_dbt_project/models/staging/: models.yml  src.yml  stg_orders.sql  stg_users.sql  user_orders.sql
with-dagster/: .gitignore  Makefile  README.md  pyproject.toml  workspace.yml
with-dagster/example_dbt_project/config/: profiles.yml
with-dagster/example_dbt_project/models/staging/: models.yml  src.yml  stg_customers.sql  stg_orders.sql
with-dagster/my_dbt_dagster/: __init__.py  pipeline.py  repository.py
with-dagster/my_dbt_dagster/assets/: __init__.py
